--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "gb-media/gbmed-form-newsletter",
     "description": "Example plugin to extend Shopware 6 plugin GbmedForm",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "type": "shopware-platform-plugin",
     "license": "proprietary",
     "authors": [
@@ -17,9 +17,9 @@
         }
     },
     "require": {
-        "shopware/core": "6.3.*",
+        "shopware/core": "6.3.* || 6.4.*",
         "shopware/administration": "*",
-        "shopware/storefront": "6.3.*",
+        "shopware/storefront": "6.3.* || 6.4.*",
         "gbmed/form": "1.1.*"
     },
     "extra": {
